--- a/main.tex
+++ b/main.tex
@@ -182,7 +182,7 @@ u2018918@live.warwick.ac.uk, u2018918}}
 \section{Current Progress}
 \input{sections/main_findings}
 
-\section{Next Steps}
+\section{Subsequent Steps}
 \input{sections/next_steps}
 
 
