--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -14,7 +14,7 @@ From that, we understood that when trying to prove statements, it is often more 
 exploring the field as a whole, tackling various problems and gathering ideas from each.
 Moreover, each failed attempt allows us to understand a problem in greater depth, how it behaves
 and how to formulate our attempt to increase our chances.
-This can be observed in our canvas board \ref{fig:theory:obsidian-canvas}, where we
+This can be observed in, we will analyze this is greater depth.ur canvas board \ref{fig:theory:obsidian-canvas}, where we
 used ``whiteboard'' approach to keep track of the project from a bird's-eye view. 
 We hope to use this exploratory methodology to uncover even more mysteries that surround
 the complexity of counting problems.
@@ -41,6 +41,7 @@ the complexity of counting problems.
 % where instead, we have a unqiue fixed point and our function will point towards the unique solution.
 % Moreover, deeper look into Kleene-logic or more specifically \textit{Hazard-free} circuits allowed
 % us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyer_ComplexityHazardfreeCircuits_2019}.
+
 % Using the two aforementioned observations as well as looking at the original reduction again allowed us to achieve
 % the desired breakthrough.
 %
