--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,16 +1,16 @@
-Over the last couple of years, there has been a revolutionary
+In recent years, there has been a revolutionary
 initiative in the field of combinatronics.
 Combinatronics has been a field of study in mathematics that primarily focused on
 the notion of counting objects with certain properties. Over time, this notion
 has shifted, especially in the subfield of algebraic combinatorics, where
 there is no clear notion of the object that we are counting,
 and the numbers express something more abstract \cite{pak_WhatCombinatorialInterpretation_2022}.
-This gave a need to be able to assign a combinatorial interpretation to such numbers.
-Being able to find such definitions or interpretations can be very important
-as it allows us to utilise tools from combinatorics and allow us to understand
+This created the need to assign combinatorial interpretations to such numbers.
+Being able to find such definitions or interpretations is be very important
+as it allows us to utilise tools from combinatorics to understand
 and reveal hidden structures and properties \cite{pak_WhatCombinatorialInterpretation_2022}. 
 Moreover, there are several problems or numbers such as \textit{Kronecker coefficients} \cite{makar_AnalysisKroneckerProduct_1949},
-whose combinatorial interpretation, would give a step towards the resolution of the $\textit{P} \neq \textit{NP}$
+whose combinatorial interpretation, would lead to groundbreaking breakthroughs such as a step closer to the resolution of the $\textit{P} \neq \textit{NP}$
 conjecture \cite{ikenmeyer_WhatWhatNot_2022, ikenmeyer_VanishingKroneckerCoefficients_2017}.
 
 
@@ -18,13 +18,13 @@ conjecture \cite{ikenmeyer_WhatWhatNot_2022, ikenmeyer_VanishingKroneckerCoeffic
 % belongs to $\textit{\#P}$, it implies that $f$ has a combinatorial interpretation
 % \cite{pak_WhatCombinatorialInterpretation_2022, ikenmeyer_WhatWhatNot_2022}. We invest
 In our current work, we focus on extending the work done by
-Ikenmeyer et al., where they focused on the creation of frameworks
+Ikenmeyer et al. \cite{ikenmeyer_WhatWhatNot_2022}, where they focused on the creation of frameworks
 that determines whether $f \in^? \textbf{\#P}$, by looking
-at the subclasses of $\textsc{\#TFNP}$ problems.
-In our work we focus specifically on the $\textsc{PPAD}$ class of problems, under the lens of $\text{PureCircuit}$,
-which utilises sequential Kleene-based circuits, to find satisfying assignments.
+at the subclasses of $\textsc{\#TFNP - 1}$ problems.
+In our work we focus specifically on the complexity class of $\textsc{PPAD}$, under the lens of $\text{PureCircuit}$,
+due to circuit-based nature.
 We hope to uncover many insights of the $\textsc{\#PureCircuit} -1$ problem 
-as well as the limits of $\textsc{\#PPAD} -1$.
+as well as explore the boundaries of $\textsc{\#PPAD} -1$.
 
 % In their paper, they were able to show that for a subclass of
 % problems, also known as $\textit{PPAD} \subseteq \textit{TFNP}$,
@@ -41,17 +41,17 @@ as well as developing a software to visualise its instances.
     \item Find a parsimonious reduction from the $\textit{EndOfLine}$ to $\textit{PureCircuit}$.
     \item Demonstrate that $\textsc{\#PureCircuit}- 1 \not\subseteq \textbf{\#P}$ either by:
         \begin{enumerate}
-            \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#PureCircuit}$ for some $k \in \mathbb{N}_{\geq 2}$
-            \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#nD-StrongSperner}$ for some $k,n \in \mathbb{N}_{\geq 2}$ 
+            \item Showing that $\textsc{\#SourceOrExcess(k,1)} \subseteq \textsc{\#PureCircuit}$ for some $k \in \mathbb{N}_{\geq 2}$
+            \item Showing that $\textsc{\#SourceOrExcess(k,1)} \subseteq \textsc{\#nD-StrongSperner}$ for some $k,n \in \mathbb{N}_{\geq 2}$ 
         \end{enumerate}
     \item Prove or disprove the following:
 \[
-\forall n \in \mathbb{N}_{\geq 2} \exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{\#PureCircuit}
+\forall n \in \mathbb{N}_{\geq 2}, \exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{\#PureCircuit}
 \]
 
 \end{enumerate}
 
-Below we will be representing the development portion of the project.
+Below we will be representing the development milestones of the project.
 
 \begin{enumerate}[label=S.\arabic*)]
     \item Visualise and verify a \textsc{PureCircuit} instance.
@@ -60,13 +60,13 @@ Below we will be representing the development portion of the project.
 \end{enumerate}
 
 
-We will compile the rest of the report, based on our current findings, how we modified our objectives to
-the current ones as well as general reflections.
+We will compile the rest of the report, based on our current findings, how we altered our previous objectives 
+and general reflections.
 
 
 \subsection{Research Question}
 
-Our main objectives revolve around the conjecture in \ref{conj:ppad-1-hardness}, where
+Our objectives revolve around the conjecture in \ref{conj:ppad-1-hardness}, where
 we investigate the boundaries of $\scn{\#PPAD}-1$ with the help of the \textsc{PureCircuit} problem.
 \begin{conjecturebox}{$\scn{\#PPAD}-1$ hardness}{ppad-1-hardness}
     Every language in \scn{PPAD} can be parsimoniously reduced up to some polynomial factor, to the
