--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -3,9 +3,9 @@
 For the remaining duration, we will focus on three main objectives:
 One will be to demonstrate that, the \textit{bipolar} colouring
 of \textsc{nD-StrongSperner} will keep the reduction parsimonious.
-Second, will be to demonstrate hardness over \textsc{\#P} class either by finding
+Subsequently, we will to demonstrate hardness over \textsc{\#P} class either by finding
 reductions from the \textsc{SourceOrExcess} problem.
-And lastly, we will be to generalise our reduction to all $\#PPAD$ problems.
+And lastly, we will be to generalise our reduction to all $\textsc{\#PPAD}$ problems.
 
 
 \subsection{Software Next Steps}
@@ -13,8 +13,8 @@ And lastly, we will be to generalise our reduction to all $\#PPAD$ problems.
 In the next steps we aim to complete the rest of the milestones. 
 We believe that the usage of methods by Eichelberger et al. \cite{eichelberger_HazardDetectionCombinational_1965}
 and or polynomial algorithm for specific cases by \cite{deligkas_PureCircuitTightInapproximability_2024}
-will allow us to identify solutions. With regards to counting, we can only hope
-to count solutions for small instances.
+will allow us to identify solutions. With regards to counting, we anticipate to implement
+this functionality for small instances.
 
 
 \subsection{Timetable}
