--- a/sections/lit_review.tex
+++ b/sections/lit_review.tex
@@ -13,10 +13,9 @@ three-value domain $\mathbb{T} \triangleq \{0, 1, \bot\}$.
 
 \subsubsection{Counting Complexity and Combinatorial Interpretations}
 
-Counting complexity looks into complexity of the numebr counting solutions
-of a given problem. There are several classes that were defined but the one
-of most interest is known as  $\textsc{\#P}$.
-$\textsc{\#P}$ was created by Valint \cite{valiant_ComplexityComputingPermanent_1979},
+Counting complexity looks into complexity of the number counting solutions
+of a given problem. In the current project we will focus specifically on the $\textsc{\#P}$ class.
+$\textsc{\#P}$ was created by Valiant \cite{valiant_ComplexityComputingPermanent_1979},
 to demonstrate the difficulty of counting the number of solutions to a problem,
 where each solution can be polynomially verified. More formally:
 
@@ -33,7 +32,7 @@ gave the following reasons for choosing $\textsc{\#P}$:
 
 \begin{enumerate}
     \item By polynomially bounding words, we avoid cases such as: $f(w) = |\{1, \hdots, f(w)\}|$.
-    \item Work wtih $f(\cdot)$, even if its direct computation is hard.
+    \item Work with $f(\cdot)$, even if its direct computation is hard.
     \item Formal system that can be highly flexible.
 \end{enumerate}
 
@@ -123,8 +122,8 @@ Using that, we define the \textsc{PPAD} complexity class \ref{def:ppad-complexit
 \end{definitionbox}
 
 \textsc{PPAD} has been created by Papadimitriou \cite{papadimitriou_ComplexityParityArgument_1994}
-to demonstrate a subset of problems in \textsc{NP} that are guaranteed to have
-a solution but are very difficult to find.
+to demonstrate a subset of problems in \textsc{NP} that guarantee
+a solution but believed to be very inefficient to find.
 In the next section,
 we introduce relevant \textsc{PPAD} problems.
 
@@ -165,9 +164,10 @@ such that for all gates $g = (T,u,v,w)$ we have:
 \end{definitionbox}
 
 In addition to the gates above, we will make use of the standard set of gates $\{\vee, \wedge, \neg\}$,
-whose behaviour is depicted in the tables shown \ref{tab:three-val-logic}.
+whose behaviour is depicted in the tables \ref{tab:three-val-logic}.
 Moreover, we will make use of the \textit{Copy} gate which we can define as $\textit{Copy}(x) = \neg (\neg x)$.
-These gates are well defined based on the \textit{NOR} gate as showed by Deligkas et al. \cite{deligkas_PureCircuitTightInapproximability_2024}.
+These gates are well defined based on the \textit{NOR} gate as showed by Deligkas et al. \cite{deligkas_PureCircuitTightInapproximability_2024}
+and do not directly affect the complexity of the problem.
 Lastly with respect to the \textit{Purify} gate,
 Deligkas et al. \cite{deligkas_PureCircuitTightInapproximability_2024} showed that the only \textit{Purify} solutions essential
 for \textsc{PPAD-completeness} are $\{(0,\bot), (\bot,1), (0,1)\}$, and the addition of more solutions does not affect its complexity.
@@ -213,22 +213,22 @@ $\bot$ & $\bot$  & $\bot$ & 1 \\
     \caption{Three-valued logic \cite{kleene_IntroductionMetamathematics_2009}}\label{tab:three-val-logic}
 \end{table}
 
-
-\begin{definitionbox}{\textsc{SourceOrExcess} problem \cite{ikenmeyer_WhatWhatNot_2022}}{source-or-excess}
-    We define as $\textit{SourceOrExcess}(k,1)$ for $k \in \mathbb{N}_{\geq 2}$
-    the search problem as such: Given a poly-sized successor circuit $S : \mathbb{B}^n$
-    and a set of predecessor poly-sized circuits $\{P_i\}_{i \in [k]}$, we define
-    the graph $G = (V,E)$ such that, $V = \mathbb{B}^n$ and $E$ as:
-    $$
-    \forall x, y \in V: (x,y) \in E \iff (S(x) = y) \wedge \bigvee_{i \in [k]} P_i(y) = x
-    $$
-    We ensure that $0^n$ is as source, meaning $\text{deg}(0^n) = (0,1)$.
-    A valid solution is a vertex $v$ such that $\textit{in-deg}(v) \neq \textit{out-deg}(v)$
-\end{definitionbox}
-
-The above problem generalises the \textsc{EndOfLine} problem which 
-does not have an explicit combinatorial interpretation as Ikenmeyer et al. \cite{ikenmeyer_WhatWhatNot_2022}
-demonstrated.
+%
+% \begin{definitionbox}{\textsc{SourceOrExcess} problem \cite{ikenmeyer_WhatWhatNot_2022}}{source-or-excess}
+%     We define as $\textit{SourceOrExcess}(k,1)$ for $k \in \mathbb{N}_{\geq 2}$
+%     the search problem as such: Given a poly-sized successor circuit $S : \mathbb{B}^n$
+%     and a set of predecessor poly-sized circuits $\{P_i\}_{i \in [k]}$, we define
+%     the graph $G = (V,E)$ such that, $V = \mathbb{B}^n$ and $E$ as:
+%     $$
+%     \forall x, y \in V: (x,y) \in E \iff (S(x) = y) \wedge \bigvee_{i \in [k]} P_i(y) = x
+%     $$
+%     We ensure that $0^n$ is as source, meaning $\text{deg}(0^n) = (0,1)$.
+%     A valid solution is a vertex $v$ such that $\textit{in-deg}(v) \neq \textit{out-deg}(v)$
+% \end{definitionbox}
+%
+% The above problem generalises the \textsc{EndOfLine} problem which 
+% does not have an explicit combinatorial interpretation as Ikenmeyer et al. \cite{ikenmeyer_WhatWhatNot_2022}
+% demonstrated.
 
 \paragraph{Sperner problems}
 
@@ -239,8 +239,8 @@ that are used: one of them will be referred to as the \textbf{linear} colouring
 where for dimension $d$, assign $d+1$ distinct colours to each point \cite{daskalakis_ComplexityComputingNash_2006, chen_Complexity2DDiscrete_2009}.
 Below we will refer to \textbf{bipolar} colouring, which has been used grid-like topologies of the Sperner property
 \cite{chen_SettlingComplexityComputing_2009, deligkas_PureCircuitTightInapproximability_2024, daskalakis_ComplexityConstrainedMinmax_2021}.
-It has to be noted that these are not their official names, but we have decided
-to use this naming scheme for clarity.
+We note that these terms are not standard in literature; we adopt this naming convention
+for the sake of clarity.
 
 
 
@@ -278,27 +278,21 @@ The above is a generalised variant of the traditional Sperner problem to
 a grid of dimensions $N$ with width of $M$. 
 Throughout literature the same variants of the problem or specifications
 have been defined using the names Sperner or discrete Brouwer \cite{chen_SettlingComplexityComputing_2009, chen_Complexity2DDiscrete_2009, daskalakis_ComplexityComputingNash_2006, deligkas_PureCircuitTightInapproximability_2024}.
-For the sake of clarity, we will stick to $\textsc{StrongSperner}$.
+For clarity, the subsequent analysis adopts $\textsc{StrongSperner}$.
 
 \begin{definitionbox}{$\scn{nD-StrongSperner}$ problem}{nd-strong-sperner}
     \textbf{Input}: A tuple $(\lambda,0^k)$ of a $\scn{StrongSperner}$ instance but for only $n$ dimensions, such that
     $\lambda : (\mathbb{B}^k)^n \to \{-1, +1\}^n$.\\
-    \textbf{Output}: A point $\alpha = (a_1, \hdots, a_n) \in (\mathbb{B}^k \setminus{1^k})^n$ such that
+    \textbf{Output}: A point $\alpha = (a_1, \hdots, a_n) \in (\mathbb{B}^k \setminus \{1^k\})^n$ such that
     $$
     \{\alpha + x \mid x \in \mathbb{B}^n\} \text{ cover all the labels \ref{def:bipolar-colouring}}
     $$
     We assume dimensionality $n \geq 2$.
 \end{definitionbox}
 
-Chen et al. \cite{chen_SettlingComplexityComputing_2009} demonstrated 
-that all $\textsc{nD-StrongSperner}$ are $\textsc{PPAD-complete}$.
-We mainly use this to show counting arguments with respect to the
-\textsc{EndOfLine} as people have indicated a parsimonious reductions
-between $\textsc{2D-StrongSperner}$ 
-and $\textsc{3D-StrongSperner}$ to the \textsc{EndOfLine} problem but 
-with \textit{linear} colouring. The authors of these papers use the colourings interchangeably when discussing their reductions,
+The authors of these papers refer to both colouring schemes interchangeably when discussing their reductions,
 so we can assume that all reductions (not necessarily counting reductions) work the similarly for either colouring
-\cite{chen_SettlingComplexityComputing_2009, deligkas_PureCircuitTightInapproximability_2024}.
+\cite{chen_SettlingComplexityComputing_2009, deligkas_PureCircuitTightInapproximability_2024, daskalakis_ComplexityComputingNash_2006, chen_Complexity2DDiscrete_2009}.
 
 
 \paragraph{Other PPAD problems} 
@@ -306,10 +300,10 @@ so we can assume that all reductions (not necessarily counting reductions) work 
 We will define several problems in \textsc{PPAD} that are related with our project
 and demonstrate the counting complexity of \textsc{PureCircuit}.
 
-\begin{definitionbox}{\textsc{SourceOrExcess} problem}{source-or-excess}
-    We define as $\textit{SourceOrExcess}(k,1)$ for $k \in \mathbb{N}_{\geq 2}$
-    the search problem as such: Given a poly-sized successor circuit $S : \mathbb{B}^n$
-    and a set of predecessor poly-sized circuits $\{P_i\}_{i \in [k]}$, we define
+\begin{definitionbox}{\textsc{SourceOrExcess} problem \cite{ikenmeyer_WhatWhatNot_2022}}{source-or-excess}
+    We define as $\textit{SourceOrExcess(k,1)}$ for $k \in \mathbb{N}_{\geq 2}$
+    the search problem as such: Given a poly-sized successor circuit $S : \mathbb{B}^n \to \mathbb{B}^n$
+    and a set of predecessor poly-sized circuits $\{P_i\}_{i \in [k]}$, where $P_i : \mathbb{B}^n \to \mathbb{B}^n$, we define
     the graph $G = (V,E)$ such that, $V = \mathbb{B}^n$ and $E$ as:
     $$
     \forall x, y \in V: (x,y) \in E \iff (S(x) = y) \wedge \bigvee_{i \in [k]} P_i(y) = x
@@ -318,36 +312,37 @@ and demonstrate the counting complexity of \textsc{PureCircuit}.
     A valid solution is a vertex $v$ such that $\textit{in-deg}(v) \neq \textit{out-deg}(v)$
 \end{definitionbox}
 
-
+The $\textsc{SourceOrExcess(k,1)}$ problem can be thought of as the generalisation of the \textsc{EndOfLine}
+problem for graphs with $\textit{in-deg}(\cdot) \leq k$ and $\textit{out-deg}(\cdot) \leq 1$.
 Lastly we will introduce \textsc{Tarski} \ref{def:tarski-ppad}
 which uses the Knaster-Tarski fixed point theorem \ref{thm:knaster-tarski} and
 belongs in $\textsc{PLS} \cap \textsc{PPAD}$, where  $\textsc{PLS}$ is a class of problems based on the idea of local search \cite{johnson_HowEasyLocal_1988}.
 %
 %
-% \begin{definitionbox}{Monotone functions}{mono-func}
-%     Given two posets $(L_1, \preceq_{L_1})$ and $(L_2, \preceq_{L_2})$, a function
-%     $f: L_1 \to L_2$ is \textbf{monotone} if and only if:
-%     $$
-%     \forall x,y \in L_1: x \preceq_{L_1} y \implies f(x) \preceq_{L_2} f(y)
-%     $$
-% \end{definitionbox}
+\begin{definitionbox}{Monotone functions}{mono-func}
+    Given two partially ordered sets $(L_1, \preceq_{L_1})$ and $(L_2, \preceq_{L_2})$, a function
+    $f: L_1 \to L_2$ is \textbf{monotone} if and only if:
+    $$
+    \forall x,y \in L_1: x \preceq_{L_1} y \implies f(x) \preceq_{L_2} f(y)
+    $$
+\end{definitionbox}
 %     
 %
 \begin{theorembox}{Knaster Tarski Fixed point theorem\cite{bronislaw_TheoremeFunctionsDensembles_1928, fearnley_FasterAlgorithmFinding_2022}}{knaster-tarski}
-    Given a lattice $(L, \wedge, \vee)$ and a \textit{monotone} $f: L \to L$
+    Given a \textit{monotone} function $f: L \to L$ \ref{def:mono-func} of a lattice $(L, \wedge, \vee)$
     $$
     \exists c \in L: f(c) = c
     $$
 \end{theorembox}
 
 \begin{definitionbox}{$\scn{Tarski}$ problem definition \cite{fearnley_FasterAlgorithmFinding_2022}}{tarski-ppad}
-    Given a lattice $(L, \wedge, \vee)$, and a \textit{monotone} function $f : L \to L$ 
+    Given a \textit{monotone} function $f: L \to L$ \ref{def:mono-func} of a lattice $(L, \wedge, \vee)$
     we define solutions to the problem as:
     \begin{enumerate}
         \item Find $x \in L: f(x) = x$
         \item Find $x,y \in L$ such that $x \preceq y$ and $f(x) \not\preceq f(y)$
     \end{enumerate}
-    We assume that $f$ is described by circuit and describes the size of the input.
+    We assume that $f$ is described by circuit and which describes the size of the input.
 \end{definitionbox}
 %
 \paragraph{Counting complexity of PPAD}
@@ -373,8 +368,7 @@ the development of robust physical systems \cite{friedrichs_MetastabilityContain
 defining frameworks like \textit{Alternative Turing machines} \cite{kozen_TheoryComputation_2006}, and
 aiding in the development of lower bounds for monotone circuits
 \cite{eichelberger_HazardDetectionCombinational_1965, ikenmeyer_ComplexityHazardfreeCircuits_2019,ikenmeyer_KarchmerWigdersonGamesHazardfree_2022,  bund_SmallHazardFreeTransducers_2025}. 
-Our current report will focus on specific concepts with Kleene logic as \textsc{PureCircuit} instances
-use the underlying logic directly.
+The current section offers a brief summary to relevant notions and concepts in Kleene logic.
 
 \begin{definitionbox}{Kleene value ordering \cite{mukaidono_BternaryLogicFunction_1972}}{kleene-order}
     The instability ordering for $\leq^u$ is defined as: $\bot \leq^u 0,1$. The $n$-dimensional
@@ -392,10 +386,26 @@ use the underlying logic directly.
     $$
 \end{definitionbox}
 
+Unless otherwise specified, we assume that all functions are \textit{natural} \ref{def:nat-func}, since
+they can be represented by circuits \ref{nat-func-circ}.
 Detecting hazards is a concept that is analysed heavily when talking about Kleene logic.
 The idea is ensuring robustness in our circuits, meaning if all resolutions of $x \in \mathbb{T}^n$
 give the same value, then we should expect circuit to behave the same way \ref{def:hf-def}.
 An example of hazard values can be seen in the figure \ref{fig:hazard-example}.
+
+
+\begin{definitionbox}{Natural functions \cite{ikenmeyer_ComplexityHazardfreeCircuits_2019}}{nat-func}
+    A function $F: \mathbb{T}^n \to \mathbb{T}^m$ for some $n, m \in \mathbb{N}$ is \textit{natural} if and only
+    if it satisfies the following properties:
+    \begin{enumerate}
+        \item \textit{Preserves stable values}: $\forall x \in \mathbb{B}^n: F(x) \in \mathbb{B}^m$ 
+    \item \textit{Preserves monotonicity} \ref{def:mono-func} \ref{def:kleene-res}
+    \end{enumerate}
+\end{definitionbox}
+
+\begin{propositionbox}{Natural functions and Circuits \cite{mukaidono_BternaryLogicFunction_1972,ikenmeyer_ComplexityHazardfreeCircuits_2019}}{nat-func-circ}
+    A function $F: \mathbb{T}^n \to \mathbb{T}^m$ can be computed by a circuit iff $F$ is \textit{natural} \ref{def:nat-func}
+\end{propositionbox}
 
 \begin{definitionbox}{Hazard \cite{ikenmeyer_ComplexityHazardfreeCircuits_2019, eichelberger_HazardDetectionCombinational_1965}}{hf-def}
     A \textit{circuit} $C$, on $n$ inputs has \textbf{hazard} at $x \in \mathbb{T}^n \iff C(x) = \bot$
